<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:background="@color/black"
        android:text="123456789"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:paddingTop="100dp"
        android:paddingRight="30dp"
        android:gravity="end"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="@string/text_c"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="@string/text_plus_multi"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="@string/text_percent"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border_bottom"
            android:text="@string/text_divide"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="7"
            android:background="@drawable/border"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="8"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="9"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border_bottom"
            android:text="@string/text_multi"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="4"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="6"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border_bottom"
            android:text="@string/text_decrease"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="2"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="3"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border_bottom"
            android:text="@string/text_plus"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/border"
            android:text="0"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border"
            android:text="@string/text_dot"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/border_bottom"
            android:text="@string/text_equal"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>